# fleetops

./: .gitignore  .yamllint.yml  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  SECURITY.md  VISION.md  go.mod  go.sum  pyproject.toml
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/scripts/: authorize.sh  review-engine.sh
.github/workflows/: dupdetect-test.yml  duplicate-detect.yml  labeler.yml  lint.yml  pr-review-dispatch.yml  root-test.yml
.notes/: gate-log.md  plan-inject-headless-exact-fallback.md  research-inject-headless-exact-fallback.md
agent-wiki/: .last-update.json  actuation.md  goal-governance.md  index.md  observation.md  quickstart.md  tui-cli.md
cmd/fleetops/: accounts.go  accounts_test.go  hook.go  hook_test.go  hooks.go  hooks_multidir_test.go  hooks_test.go  main.go  main_test.go  report.go  report_test.go
cmd/missionctl/: hook.go  hook_test.go  hooks.go  hooks_test.go  main.go  main_test.go  report.go  report_test.go
docs/: adr-loop-state-model.md  adr-vendor-independent-actuation.md  design-loop-engine-mvp.md  maintainer-review-command.md
docs/specs/: seed-loop-engine-mvp-2026-07-17.md  seed-missionctl-fleet-2026-07-16.md
internal/accounts/: accounts.go  accounts_test.go  mutate.go  mutate_test.go
internal/accountstatus/: accountstatus.go  accountstatus_test.go
internal/claude/: metrics.go  metrics_test.go  procs.go  procs_test.go  scan.go  scan_accounts_test.go  scan_roots_test.go  scan_test.go
tests/: test_governor.py
(+86 files in other folders)
