[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "missionctl"
version = "0.1.0"
description = "Mission control for a fleet of autonomous agent loops — oracle-verified, governed, human-gated."
requires-python = ">=3.11"
dependencies = [
    "textual>=0.60",
    "httpx>=0.27",   # LLM calls via a gateway (Bifrost)
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
missionctl = "missionctl.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
